apps/authentik/templates/ldap-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ldap-route
  labels:
    app.kubernetes.io/name: authentik-ldap
spec:
  parentRefs:
  - name: private-gateway
    sectionName: ldaps
  hostnames:
  - 'ldap.mobrockers.com'
  rules:
  - backendRefs:
    - name: ak-outpost-ldap
      port: 636
