apps/authentik/templates/mobrockers-com-domain-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mobrockers-com-domain-auth-ingress
spec:
  rules:
    - host: authentik.mobrockers.com
      http:
          paths: 
        - path: /outpost.goauthentik.io
          pathType: Prefix
          backend:
            service:
              name: ak-outpost-authentik-embedded-outpost
              port:
                number: 9000
