apps/authentik/templates/proxy-outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost-mobrockers-com
spec:
  rules:
    - host: mobrockers.com
      http:
        paths: 
        - path: /outpost.goauthentik.io
          pathType: Prefix
          backend:
            service:
              name: ak-outpost-authentik-embedded-outpost
              port:
                number: 9000
